--- a/praw.ini
+++ b/praw.ini
@@ -1,7 +1,7 @@
-[BotName-GPT2]
-username=
-password=
-bot_name=
+[Bot-GPT2]
+username=Yuli-Ban-Bot-GPT2
+password=Password123
+bot_name=Yuli-Ban-Bot-GPT2
 bot_author=r/Arzen221
 bot_version=1.0.0
 client_id=
