--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 /.env
 /praw.ini
 /model/*/
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/inspectionProfiles/Project_Default.xml
+/.idea/simple-bot-gpt2.iml
+/.idea/vcs.xml
