Adding readme with usful information

--- a/.env_template
+++ b/.env_template
@@ -1,9 +1,6 @@
 PsqlUser=""
 PsqlPassword=""
-BotName=""
-Sub=""
-Yuli-Ban-Bot-GPT2=""
-SportsFanGhost-Bot=""
-ReplyThreshold="900"
-FlairId=""
-TriggerWords=""
+Foo-Bot-GPT2="D:\\models\\Faz-Bot"
+Bar-Bot-GPT2="D:\\models\\Bar-Bot"
+Baz-Bot="D:\\models\\Baz-Bot"
+TriggerWords="Barry,Sports,SportFan,Barry Bonds,Bonds,Sports,Sport,SportsFanBot"
