Adding more stuff

--- a/.env_template
+++ b/.env_template
@@ -1,6 +1,13 @@
-PsqlUser=""
-PsqlPassword=""
-Foo-Bot-GPT2="D:\\models\\Faz-Bot"
-Bar-Bot-GPT2="D:\\models\\Bar-Bot"
-Baz-Bot="D:\\models\\Baz-Bot"
-TriggerWords="Barry,Sports,SportFan,Barry Bonds,Bonds,Sports,Sport,SportsFanBot"
+PsqlUser="postgres"
+PsqlPassword="guitar!01"
+FlairId="ff1e3b8e-a518-11ea-b87f-0e2836404d8b"
+AllowSubmissions="CoopAndPabloPlayHouse:4"
+SpezBotGPT="/models/spez"
+KimmieBotGPT="/models/Kimmie"
+SportsFanBotGhostGPT="/models/SportsFanBotGhostGPT"
+LauraBotGPT="/models/GusterIs4Lovers"
+AustinBotGPT="/models/yuli-ban-3"
+TriggerWords="Foo,Bar,Baz"
+BannedWords="Casey,[removed],[deleted]"
+ReplyThreshold="10"
+AzureStorageConnectionString=""
